# libsel4startstop

./: CMakeLists.txt  Kbuild  Kconfig  Makefile  README.md
include/sel4/: stop.h
src/: sel4_stop.c
src/arm/: libsel4_start.S
src/x86/: libsel4_start.S
